modify runtime thread-pools